# my-app-be

./: .env.docker  .gitignore  .pre-commit-config.yaml  02-setup.md  03-packages-and-commands.md  04-troubleshooting.md  06-ci-cd.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  ci.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  run-tests-on-tag.yml  sync-to-stable.yml  test-dev.yml
app/: .env  main.py
app/api/: router.py
app/api/v1/: posts.py
app/core/: config.py  logger.py  security.py
app/db/: seed.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 20251216_initial_migration.py
app/models/: post.py
app/repositories/: post_repository.py
app/schemas/: post.py  post_schema.py  response.py
app/services/: post_service.py
docs/: 01-introduction.md  02-setup.md  05-development-workflow.md
scripts/: tag-and-push.sh  tag_and_push.py
tests/: conftest.py
tests/api/: __init__.py  test_posts_api.py
