[tool.poetry]
name = "my-fastapi-app"
version = "0.1.0"
description = "A complete FastAPI backend with clean architecture, asynchronous database operations, and production-ready logging."
authors = ["hoangduc.uit.dev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {version = "0.29.0", extras = ["standard"]}
sqlalchemy = "2.0.29"
asyncpg = "0.29.0"
alembic = "1.13.1"
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
python-dotenv = "1.0.1"
structlog = "24.1.0"
python-json-logger = "2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-asyncio = "0.23.7"
httpx = "0.27.0"
pytest-cov = "5.0.0"
aiosqlite = "0.20.0"
ruff = "^0.4.10"
black = "^24.4.2"
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Bỏ qua cảnh báo DeprecationWarning từ Starlette về `python_multipart`
    "ignore:Please use `import python_multipart` instead.:PendingDeprecationWarning"
]
